Fazer secções de colunas, cadastro e footer

--- a/index.html
+++ b/index.html
@@ -24,5 +24,77 @@
 
         <img src="img/hand.png" alt="Celular">
     </section>
+
+    <section class="colunas">
+            <div>
+                <img src="img/icone1.png" alt="config">
+                <h2>Editable Theme</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+            </div>
+            <div>
+                <img src="img/icone2.png" alt="estrela">
+                <h2>Flat Design</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+            <div>
+                <img src="img/icone3.png" alt="planeta">
+                <h2>Reach Your Audience</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+    </section>
+    <section class="email">
+        <div>
+            <h3>Get Notified Of Any Updates!</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, culpa adipisci, vitae necessitatibus laborum numquam consequatur quaerat alias soluta ea, exercitationem quibusdam. Aliquid mollitia debitis quibusdam asperiores magnam dolor explicabo?</p>
+           <div class= "cadastro">
+                <input type="Email Address">
+                <button>Notify</button>
+            </div>
+        </div>
+        <div id = "video">
+            <iframe src="https://player.vimeo.com/video/273262257" width="440" height="290" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    
+        </div>
+    </section>
+    <section class="nomes" > 
+        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus consequuntur ad, repellendus reprehenderit dolor sit quasi cupiditate iure nemo voluptatem modi maxime illum rem aliquid ea doloremque architecto nihil quibusdam?"</p>
+        <h5>Jane Hunt</h4>
+        <div class = "pessoas">
+                <img src="img/pessoa1.jpg" alt="">
+                <img src="img/pessoa1.jpg" alt="">
+                <img src="img/pessoa1.jpg" alt="">
+                <img src="img/pessoa1.jpg" alt="">
+                <img src="img/pessoa1.jpg" alt="">
+                <img src="img/pessoa1.jpg" alt="">
+                <img src="img/pessoa1.jpg" alt="">
+                <img src="img/pessoa1.jpg" alt="">
+                <img src="img/pessoa1.jpg" alt="">
+                <img src="img/pessoa1.jpg" alt="">
+                <img src="img/pessoa1.jpg" alt="">
+                <img src="img/pessoa1.jpg" alt="">
+                <img src="img/pessoa1.jpg" alt="">
+                <img src="img/pessoa1.jpg" alt="">
+                <img src="img/pessoa1.jpg" alt="">
+                <img src="img/pessoa1.jpg" alt="">
+                <img src="img/pessoa1.jpg" alt="">
+                <img src="img/pessoa1.jpg" alt="">
+
+        </div>
+        <h3>Say Hi & Get in Touch</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem, totam voluptatibus!</p>
+    </section>
+
+    <footer>
+        <div>
+            <ul>
+                <li>Contact</li>
+                <li>Download</li>
+                <li>Press</li>
+                <li>Email</li>
+                <li>Support</li>
+                <li>Privacy Policy</li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
